Fix errors, setup cmake and shader compilation.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,15 @@
 cmake_minimum_required(VERSION 3.0)
-project(src)
+
+
+# set build dir for debug and release configs
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/build/debug")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/build/release")
+
+# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 file(GLOB project_src CONFIGURE_DEPENDS "*.h" "*.cpp")
 
 # include_directories(src PUBLIC "${PROJECT_SOURCE_DIR}")
-add_executable(${PROJECT_NAME} ${project_src})
+add_executable( ${PROJECT_NAME} ${project_src} )
+
+target_link_libraries( ${PROJECT_NAME} Vulkan::Vulkan glfw glm tinyobjloader )
