--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,14 @@
 cmake_minimum_required(VERSION 3.0)
 project(vulkan-renderer)
 
+set(CMAKE_CXX_STANDARD 17)
+
+find_package(Vulkan REQUIRED COMPONENTS glslc)
+
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+
 add_subdirectory(src)
+add_subdirectory(libs)
+add_subdirectory(shaders)
