Add cyHair files. Restructure CMake files, libs, includes and add compile definitions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,7 @@ find_package(Vulkan REQUIRED COMPONENTS glslc)
 
 add_subdirectory(src)
 add_subdirectory(libs)
+add_subdirectory(includes)
 add_subdirectory(shaders)
+add_subdirectory(models)
+add_subdirectory(textures)
